Fix a bunch of behaviors on mobile
- Set an initial viewport to be basically correct
- Fix hovering styling finally

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@ $name-width: 7em;
 body {
   margin: 1em auto;
   max-width: 800px;
-  padding: 0 3px;
+  padding: 0 5px;
   font-family: "Barlow", sans-serif;
 }
 
